<resources>
  <string name="app_name">Can You Beat Rps</string>
  <string name="title_home">CanYouBeatRps</string>
  <string name="title_dashboard">History</string>
  <string name="login_failure">\"Unable to sign in with the provided credentials\"</string>
  <string name="loss">Loss:</string>
  <string name="total_losses">0.0</string>
  <string name="message">Let\'s Play!</string>
  <string name="rock">Rock</string>
  <string name="paper">Paper</string>
  <string name="scissors">Scissors</string>
  <string name="win_rate">Win Rate:</string>
  <string name="number_wins">0.0</string>
  <string name="percent_of_games">% of Games</string>
  <string name="player">Player:</string>
  <string name="computer">Computer:</string>
  <string name="blank_space">...</string>
  <string name="dash">-</string>
  <string name="sign_out">sign out</string>
  <string name="settings">settings</string>
  <string name="how_to">How To Play</string>
  <string name="info_ok">ok</string>
  <string name="description">"This is the classic game of rock, paper, scissors where rock
    beats scissors, paper beats rock and scissors beats paper. It's as simple as that!"</string>

</resources>
